# pdfiles

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.index  README.md  REFERENCE.md  docker-compose.cpu.yml  docker-compose.yml  pdfiles.bat  pdfiles.sh  pyproject.toml
.github/workflows/: docker.yml
docker/: nginx.conf
src/pdfiles/: api.py  app.py  bouncer.py  cli.py  config.py  embedder.py  indexer.py  librarian.py  manifest.py  opt_parser.py  pipeline.py  pooling.py  qdrant_store.py  renderer.py  searcher.py
tests/: test_bouncer.py  test_embedder.py  test_librarian.py  test_opt_parser.py  test_pooling.py  test_qdrant_store.py  test_renderer.py
tools/: search_lab.py
web/: index.html  package-lock.json  package.json
web/src/: App.jsx  api.js  index.css
